# Cpp_projects

asm/: .gitignore  mul.asm  sub.asm
bigint/: big_integer.cpp  big_integer.h  log  test.sh
bigint/ci-extra/: build.sh
bimap/src/: bimap.h  intrusive-set.h
function/src/: function.h
huffman/: CMakeLists.txt  coverage.info  war_and_peace
huffman/ci-extra/: test-coverage.sh
huffman/huffman-lib/: CMakeLists.txt  bit_sequence.cpp  bit_sequence.h  buffered_reader.h  constants.h  decoding_book.cpp  decoding_book.h  encoding_book.cpp  encoding_book.h  util.cpp  util.h
huffman/huffman-tool/: CMakeLists.txt  tool.cpp
huffman/report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
huffman/report/huffman-lib/: bit_sequence.cpp.func-c.html  bit_sequence.cpp.func.html  bit_sequence.cpp.gcov.html  bit_sequence.h.func-c.html  bit_sequence.h.func.html  bit_sequence.h.gcov.html  (+15 more)
huffman/unit-tests/: CMakeLists.txt  dataset.cpp  dataset.h  tests.cpp
intrusive-list/src/: intrusive-list.cpp  intrusive-list.h
matrix/src/: matrix.h
matrix/test/: col_iterator_test.cpp  ctors_test.cpp  operations_test.cpp  test_helpers.h  traits_test.cpp
optional/src/: enablers.h
signal/src/: intrusive.h
socow-vector/: .clang-tidy  .ninja_deps  .ninja_log  build.ninja  compile_commands.json  log  test.sh
socow-vector/src/: socow-vector.h
socow-vector/test/: cow-test.cpp  custom.cpp  small-object-test.cpp
substr/: .clang-tidy  .gitignore  solution.cpp
variant/src/: type_traits.h
vector/src/: vector.h
vector/test/: tests.cpp
wordcount/: wordcount.asm
(+188 files in other folders)
